# tint

./: .clang-format  CMakeLists.txt  README.md  conf.cpp  conf.h  main.cpp  meson.build  panel.cpp  panel.h  plugin-clock.cpp  plugin-taskbar.cpp  resources.cpp  task.cpp  task.h  taskbar.cpp  taskbar.h  tintrc
doc/: meson.build  tint.1.scd  tintrc
include/: conf.h  item-type.h  log.h  panel.h  plugin-clock.h  plugin-taskbar.h  resources.h  sfdo.h  taskbar.h
